--- a/app/src/main/res/layout/activity_ad_list.xml
+++ b/app/src/main/res/layout/activity_ad_list.xml
@@ -9,24 +9,16 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.greidan.greidan.greidan.AdListActivity">
 
-    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" >
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        <LinearLayout
-            android:id="@+id/foobar"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:orientation="vertical" >
-
-
-            <Button
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:text="Button 1" />
-
-        </LinearLayout>
-
-    </ScrollView>
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/listView2"
+            android:entries="@array/adlist_items" />
+    </LinearLayout>
 
 </RelativeLayout>
