--- a/app/src/main/res/layout/activity_new_ad.xml
+++ b/app/src/main/res/layout/activity_new_ad.xml
@@ -9,52 +9,66 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.greidan.greidan.greidan.NewAdActivity">
 
-
-    <LinearLayout
-        android:orientation="vertical"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true">
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/editText"
-            android:layout_gravity="center_horizontal"
-            android:hint="Titill" />
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textMultiLine"
-            android:ems="10"
-            android:id="@+id/editText2"
-            android:layout_gravity="center_horizontal"/>
+        android:layout_height="wrap_content"
+        android:id="@+id/scrollView" >
 
         <LinearLayout
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true">
+            android:layout_height="wrap_content"
+            android:id="@+id/linearLayout2">
 
-            <Button
-                android:layout_width="wrap_content"
+            <EditText
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Setja inn"
-                android:id="@+id/button"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"/>
+                android:id="@+id/editText"
+                android:layout_gravity="center_horizontal"
+                android:hint="Titill" />
 
-            <Button
-                android:layout_width="wrap_content"
+            <Spinner
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Hætta við"
-                android:id="@+id/button2"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"/>
+                android:id="@+id/spinner"
+                android:entries="@array/categories"
+                android:hint="Veldu flokk"/>
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textMultiLine"
+                android:lines="10"
+                android:isScrollContainer="true"
+                android:ems="10"
+                android:gravity="top"
+                android:id="@+id/editText2"
+                android:layout_gravity="center_horizontal"
+                android:hint="Efni" />
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/linearLayout" >
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Setja inn"
+                    android:id="@+id/button"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1"/>
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Hætta við"
+                    android:id="@+id/button2"
+                    android:layout_weight="1"/>
+            </LinearLayout>
+
         </LinearLayout>
-    </LinearLayout>
+    </ScrollView>
 
 </RelativeLayout>
