--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -63,10 +63,10 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Smelltu hér til að stofna aðgang"
+                android:text="@string/action_register_link"
                 android:id="@+id/link_register"
                 android:textAlignment="center"
-                android:textSize="18dp"
+                android:textSize="18sp"
                 android:paddingTop="15dp"
                 android:paddingBottom="15dp" />
 
