--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -11,5 +11,5 @@
     <item
         android:id="@+id/logout"
         android:orderInCategory="101"
-        android:title="Log out" />
+        android:title="@string/action_logout" />
 </menu>
