--- a/app/src/main/res/layout/activity_ad_list.xml
+++ b/app/src/main/res/layout/activity_ad_list.xml
@@ -9,6 +9,14 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.greidan.greidan.greidan.AdListActivity">
 
+    <ProgressBar
+        android:id="@+id/ad_list_progress"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:visibility="gone" />
+
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
