--- a/app/src/main/res/layout/activity_ad_list.xml
+++ b/app/src/main/res/layout/activity_ad_list.xml
@@ -9,23 +9,58 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".activity.AdListActivity">
 
-    <ProgressBar
-        android:id="@+id/ad_list_progress"
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:visibility="gone" />
-
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ListView
+        <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/ad_list" />
+            android:layout_height="50dp"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentTop="true">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/radius"
+                android:id="@+id/textView"
+                android:layout_gravity="center_vertical" />
+
+            <SeekBar
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/ad_list_radius_seek"
+                android:layout_gravity="center_vertical"
+                android:clickable="false" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="false">
+
+            <ProgressBar
+                android:id="@+id/ad_list_progress"
+                style="?android:attr/progressBarStyleLarge"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:visibility="gone"
+                android:layout_gravity="center_horizontal" />
+
+            <ListView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/ad_list"
+                android:layout_alignParentTop="false"
+                android:layout_alignStart="@+id/ad_list_progress"
+                android:layout_alignParentBottom="true" />
+        </LinearLayout>
     </LinearLayout>
 
 </RelativeLayout>
