--- a/app/src/main/res/layout/activity_ad_view.xml
+++ b/app/src/main/res/layout/activity_ad_view.xml
@@ -21,19 +21,36 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="title"
-            android:id="@+id/ad_view_title" />
+            android:id="@+id/ad_view_title"
+            android:layout_marginBottom="10dp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="author"
-            android:id="@+id/ad_view_author" />
+            android:text="@string/author"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:id="@+id/ad_view_author"
+            android:layout_marginBottom="5dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/time_posted_with_category"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:id="@+id/ad_view_time_posted"
+            android:layout_marginBottom="5dp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@android:color/darker_gray"
+            android:layout_marginTop="10dp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="content"
             android:id="@+id/ad_view_content"
-            android:paddingTop="20dp" />
+            android:layout_marginTop="10dp" />
     </LinearLayout>
 </RelativeLayout>
