--- a/app/src/main/res/layout/activity_new_ad.xml
+++ b/app/src/main/res/layout/activity_new_ad.xml
@@ -55,6 +55,28 @@
                 android:layout_gravity="center_horizontal"
                 android:hint="@string/prompt_ad_content" />
 
+            <HorizontalScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/horizontalScrollView"
+                android:layout_gravity="center_horizontal" >
+
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:id="@+id/new_ad_image_layout">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:id="@+id/new_ad_image"
+                        android:src="@drawable/powered_by_google_light"/>
+
+                </LinearLayout>
+            </HorizontalScrollView>
+
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
