--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -72,20 +72,27 @@
             android:layout_marginTop="50dp"
             android:layout_below="@id/image_profile">
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/button_message"
-                android:id="@+id/button_message"
-                android:layout_weight="1"/>
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/button_review"
-                android:id="@+id/button_review"
-                android:layout_weight="1"/>
         </LinearLayout>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/button_message"
+            android:id="@+id/button_message"
+            android:layout_weight="1"
+            android:layout_below="@+id/image_profile"
+            android:layout_alignParentStart="true"
+            android:layout_alignEnd="@+id/label_user_rating" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/button_review"
+            android:id="@+id/button_review"
+            android:layout_weight="1"
+            android:layout_below="@+id/image_profile"
+            android:layout_alignEnd="@+id/image_profile"
+            android:layout_toEndOf="@+id/button_message" />
 
     </RelativeLayout>
 
