--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -18,16 +18,14 @@
             android:id="@+id/user_profile_fragment"
             class="com.greidan.greidan.greidan.fragment.UserProfileFragment"
             android:layout_width="match_parent"
-            android:layout_height="0px"
-            android:layout_weight="7"
+            android:layout_height="270dp"
             tools:layout="@layout/fragment_user_profile" />
 
         <fragment
             android:id="@+id/review_fragment"
             class="com.greidan.greidan.greidan.fragment.ReviewFragment"
             android:layout_width="match_parent"
-            android:layout_height="0px"
-            android:layout_weight="6.79"
+            android:layout_height="wrap_content"
             tools:layout="@layout/fragment_review" />
 
     </LinearLayout>
