--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -19,7 +19,7 @@
             android:id="@+id/image_profile"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
-            android:src="@drawable/powered_by_google_light"
+            android:src="@drawable/greidan"
             android:layout_margin="10dp" />
 
         <TextView
@@ -69,30 +69,28 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
-            android:layout_below="@id/image_profile">
+            android:layout_below="@id/image_profile"
+            android:layout_marginTop="20dp">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/button_message"
+                android:id="@+id/button_message"
+                android:layout_weight="1"
+                android:layout_below="@+id/image_profile"/>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/button_review"
+                android:id="@+id/button_review"
+                android:layout_weight="1"
+                android:layout_below="@+id/image_profile" />
 
         </LinearLayout>
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/button_message"
-            android:id="@+id/button_message"
-            android:layout_weight="1"
-            android:layout_below="@+id/image_profile"
-            android:layout_alignParentStart="true"
-            android:layout_alignEnd="@+id/label_user_rating" />
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/button_review"
-            android:id="@+id/button_review"
-            android:layout_weight="1"
-            android:layout_below="@+id/image_profile"
-            android:layout_alignEnd="@+id/image_profile"
-            android:layout_toEndOf="@+id/button_message" />
 
     </RelativeLayout>
 
