--- a/app/src/main/res/layout/activity_new_review.xml
+++ b/app/src/main/res/layout/activity_new_review.xml
@@ -9,12 +9,22 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.greidan.greidan.greidan.activity.NewReviewActivity">
 
+    <ProgressBar
+        android:id="@+id/new_review_progress"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true">
+        android:layout_centerHorizontal="true"
+        android:id="@+id/new_review_container">
 
         <TextView
             android:layout_width="wrap_content"
